Mise à jour TD Covid

--- a/validation/validation/pom.xml
+++ b/validation/validation/pom.xml
@@ -3,12 +3,12 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
  
-    <groupId>fr.iut</groupId>
-    <artifactId>exo2</artifactId>
+    <groupId>bean</groupId>
+    <artifactId>validation</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
  
-    <name>exo2</name>
+    <name>validation</name>
     <url>http://www.example.com</url>
  
     <properties>
@@ -32,7 +32,31 @@
 
     <dependencies>
         <!-- Dependencies -->
-    
+        <!-- https://mvnrepository.com/artifact/jakarta.validation/jakarta.validation-api -->
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>7.0.2.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>jakarta.el</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>jakarta.el</artifactId>
+            <version>4.0.1</version>
+        </dependency>
     
         <!-- Testing dependencies-->
         <dependency>
@@ -57,26 +81,6 @@
     
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.7</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>report</id>
-                        <!-- Précise que le plugin s'executera lors du cyle maven "verify" -->
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
                 <version>3.1.0</version>
@@ -114,7 +118,7 @@
                     <configuration>
                     <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                        <mainClass>fr.iut.App</mainClass>
+                        <mainClass>bean.App</mainClass>
                         </transformer>
                     </transformers>
                     </configuration>
