--- a/golf/pom.xml
+++ b/golf/pom.xml
@@ -53,6 +53,11 @@
             <version>${junit}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>5.0.1</version>
+        </dependency>
     </dependencies>
     
     <build>
