--- a/room-manager/pom.xml
+++ b/room-manager/pom.xml
@@ -79,6 +79,17 @@
       <artifactId>javax.el-api</artifactId>
       <version>2.2.4</version>
     </dependency>
+    <dependency>
+      <groupId>jakarta.validation</groupId>
+      <artifactId>jakarta.validation-api</artifactId>
+      <version>3.0.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>7.0.2.Final</version>
+    </dependency>
   </dependencies>
   <build>
     <resources>
