--- a/persistance/room-manager-1.5-src/room-manager/pom.xml
+++ b/persistance/room-manager-1.5-src/room-manager/pom.xml
@@ -79,6 +79,17 @@
       <artifactId>javax.el-api</artifactId>
       <version>2.2.4</version>
     </dependency>
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>2.0.1.Final</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>5.2.5.Final</version>
+    </dependency>
   </dependencies>
   <build>
     <resources>
