--- a/helloServlet/pom.xml
+++ b/helloServlet/pom.xml
@@ -31,6 +31,17 @@
       <artifactId>freemarker</artifactId>
       <version>2.3.20</version>
     </dependency>
+    <!-- QR Code management -->
+    <dependency>
+      <groupId>com.google.zxing</groupId>
+      <artifactId>core</artifactId>
+      <version>3.2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.zxing</groupId>
+      <artifactId>javase</artifactId>
+      <version>3.2.0</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>helloServlet</finalName>
