--- a/conteneurWeb/helloServlet/pom.xml
+++ b/conteneurWeb/helloServlet/pom.xml
@@ -24,6 +24,21 @@
       <version>3.1.0</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.freemarker</groupId>
+      <artifactId>freemarker</artifactId>
+      <version>2.3.20</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.zxing</groupId>
+      <artifactId>core</artifactId>
+      <version>3.2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.zxing</groupId>
+      <artifactId>javase</artifactId>
+      <version>3.2.0</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>helloServlet</finalName>
