--- a/helloServlet/pom.xml
+++ b/helloServlet/pom.xml
@@ -42,6 +42,12 @@
       <artifactId>javase</artifactId>
       <version>3.2.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.inject.extensions</groupId>
+      <artifactId>guice-servlet</artifactId>
+      <version>5.0.1</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>helloServlet</finalName>
