--- a/room-manager-api-src/room-manager-api-exercice/pom.xml
+++ b/room-manager-api-src/room-manager-api-exercice/pom.xml
@@ -138,6 +138,13 @@
             <artifactId>h2</artifactId>
             <version>1.3.160</version>
         </dependency>
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>room-manager-api</finalName>
@@ -161,6 +168,17 @@
             </resource>
         </resources>
         <plugins>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.4.38.v20210224</version>
+                <configuration>
+                    <scanIntervalSeconds>10</scanIntervalSeconds>
+                    <webApp>
+                        <contextPath>/room-manager-api</contextPath>
+                    </webApp>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.bsc.maven</groupId>
                 <artifactId>maven-processor-plugin</artifactId>
