--- a/room-manager-api-exercice/pom.xml
+++ b/room-manager-api-exercice/pom.xml
@@ -250,6 +250,27 @@
                         <artifactId>checkstyle</artifactId>
                         <version>8.16</version>
                     </dependency>
+                    <dependency>
+                        <groupId>com.sun.jersey</groupId>
+                        <artifactId>jersey-server</artifactId>
+                        <version>1.9</version>
+                    </dependency>
+
+                    <dependency>
+                        <groupId>com.sun.jersey.contribs</groupId>
+                        <artifactId>jersey-guice</artifactId>
+                        <version>1.9</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.sun.jersey</groupId>
+                        <artifactId>jersey-json</artifactId>
+                        <version>1.9</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>javax.annotation</groupId>
+                        <artifactId>javax.annotation-api</artifactId>
+                        <version>1.3.2</version>
+                    </dependency>
                 </dependencies>
                 <configuration>
                     <configLocation>config/checkstyle/checkstyle.xml</configLocation>
@@ -260,6 +281,17 @@
                     <failsOnError>true</failsOnError>
                     <failOnViolation>true</failOnViolation>
                     <linkXRef>false</linkXRef>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.4.38.v20210224</version>
+                <configuration>
+                    <scanIntervalSeconds>10</scanIntervalSeconds>
+                    <webApp>
+                        <contextPath>/room-manager-api</contextPath>
+                    </webApp>
                 </configuration>
             </plugin>
         </plugins>
@@ -340,6 +372,7 @@
                     </reportSet>
                 </reportSets>
             </plugin>
+
         </plugins>
     </reporting>
 </project>
